Fixed ArtworkAdder to provide artwork data for cropper rather than cropData and orientation separately.  And added more shadows to the framed picture.

--- a/src/app/gallery/gallery_styles.css
+++ b/src/app/gallery/gallery_styles.css
@@ -68,6 +68,7 @@
 }
 
 .gallery--controls {
+    z-index: 1;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     height: 60px;
     background-color: whitesmoke;
